--- a/Tex/simulation.tex
+++ b/Tex/simulation.tex
@@ -293,7 +293,7 @@ If instead of considering the peak value of the reconstruction as signal, the th
 
 A simulation with varying number of spheres placed randomly inside the focal volume while ensuring a minimum distance between neighboring spheres with no other interaction was performed to decide if measuring the fluorescence of more than one nanoparticle in one shot is advantageous.
 The minimum distance was chosen according to the typical size of nanoparticle capping agents; the number of spheres increases up to a simulated Poisson sphere distribution (see appendix \fref{algo:bridson} for details) as densest random placement of particles, leading to 25\% of the volume filled by possible emitters.
-Three factors determine the structure factor of these samples: The structure factor of the focus, the structure factor of points following the poison sphere distribution  and the structure factor of a single sphere (see \fref{fig:multisphere1} and \fref{fig:multiphere3}). 
+Three factors determine the structure factor of these samples: The structure factor of the focus, the structure factor of points following the poison sphere distribution  and the structure factor of a single sphere (see \fref{fig:multisphere1} and \fref{fig:multisphere3}). 
 For spheres with 20\, nm radius, a spacing layer of 5\,nm around each sphere, with  50000 excited atoms per sphere on average, a focus of 200\,nm (FWHM), the fluorescence on a 1024x1024 pixel (pixelsize 100\,um) detector placed 30\,cm was simulated. In this geometry, assuming constant distance to the sample for each detector pixel, approximately 1\% of the emitted photons reach the detector.  For each number of spheres, 5000 images were used for a radial reconstruction using the direct method (see \fref{fig:multisphere2}).
 As the number of photons emitted by each sphere was kept constant, opposing effects occur:  With an increasing number of particles, more are photons are emitted, and the Poisson noise is reduced, but the signal strength in low scattering angles decreases as the structure factor changes from a single sphere to a hard-sphere model and the influence of the focal volume and the distribution of the spheres on the structure factor increases, resulting in 
 
@@ -335,7 +335,6 @@ The results show, that in high angles, the limited coherence length of the fluor
 
 \begin{figure}
 \centering
-	
 	\begin{subfigure}[b]{0.45\textwidth}
 		\includegraphics[width=\linewidth]{images/timedependent_1.pdf}
 		\caption{Speckle Contrast for different pulse FWHM and decay times $\tau$}
@@ -364,23 +363,11 @@ The results show, that in high angles, the limited coherence length of the fluor
 	In \textbf{(b)} exemplary radial profiles of the reconstruction from 50 of those patterns are shown for one fixed $\tau$. Those reconstructions are used to determine the signal visibility as quantification of the  dependence of the signal strength on the pulse width in \textbf{(c)}. For long pulses, the reciprocal dependence on the pulse length is visible.
 	In \textbf{(d)}  the influence of sample thickness $t$ on the speckle strength under different angles is show (using the mean of 5 independent simulations and the standard deviation as errors). The dashed lines are the approximation $s(t,\alpha)=\frac{s(t\rightarrow0\text{um}, \alpha= 0)}{1+\left(1-\cos{\alpha}\right)\sfrac{t}{2.35\text{um}}}$. For small angles, the sample thickness does not influence the speckle strength.}
 \end{figure}
-
-%$y=c/\left(1+(\sfrac{{4})\right)$
-
 \clearpage
-\section{Discussion and Implications for an Experiment}
-The overall agreement of the simulation results with the theoretical prediction for the cases considered increase the trust in both. The agreement between the time-dependent simulation with the approximation of the number of modes overlaid in the measurement allows to simplify the simulation of samples with many excited atoms (>$10^6$) and long pulse lengths, as the time-independent simulation is, despite the applied optimizations, still much faster to perform.
+\subsection{Simulation of a Focus Measurement}
+A simulation was performed under similar conditions as will be used later on for the measurement of the focal width at SACLA:  A 5\,um thick copper foil, rotated 45° with respect to the beam (200\,nm focus FWHM, 10\,fs pulse FWHM), but (due to computational constraints) only emitting at a single energy line and polarisation, measured with a detector with 50\,um pixel size (charge sharing $\sigma$=5\,um) placed in a distance of 1\,m perpendicular to the beam. The result of the reconstruction is shown in \fref{fig:simfoil}. 
 
-The scaling of the SNR with square root of the number of pixels in the performed simulation should not lead to the general conclusion that all pixel pairs pixels leading the to same $\Delta $ are independent measurement. First, depending on the geometry, the same pixels might be part of more than one of these pairs. In the small angle regime this leads to a constant reduction of the truly independent measurements that can be extracted from a single image. Second, the actual signal to be recovered creates non trivial correlations between the different pixel pairs. But the results suffices to stress the importance of having a large detector as well as a sufficient way to perform the analysis on large images.
-
-The simulation of conditions capturing most of the experimental parameters and extrapolating using the scaling laws shown, allows to estimate the number of images necessary for a successful IDI measurement: The result of a simulation for a thick 5\,um Copper foil, rotated 45° with respect to the beam (200\,nm focus FWHM, 10\,fs pulse FWHM), emitting only at a single energy line and polarisation, measured with a detector with 50\,um pixel size (charge sharing $\sigma$=5\,um) placed in a distance of 1\,m perpendicular to the beam is shown in \fref{fig:simfoil}. Even though the under-sampling in the horizontal direction causes a significant reduction in signal strength, 50 images suffice in the simulation to get an acceptable SNR (>3), leading to the estimation that, even with the additional reduction in contrast due to multiple emission lines and polarization (combined a factor <4), less than 1000 images would suffice for a replication of the previously published results \cite{nakumura2020}.
-
-The theoretically almost doubled resolution of IDI compared to CDI will for most samples be limited by the (approximate) $q^{-4}$ dependence of the structure factor due to Porod's law and the SNR, thus only increasing the resolution for samples with strong features at high $q$, such as single crystals.
-The most relevant implications for imaging crystals are: First, it is beneficial to use a single crystal compared to a powder to allow averaging over many shots with Bragg peaks at the same positions and there is a trade-off between the number of signal photons, undersampling, and loss of speckle contrast due to the path length difference caused by the sample thickness. The results for varying crystal sizes seemingly contradict the results of simulations published independently by Trost et al, which showed a decreasing SNR with increasing number of emitters but at a higher photon yield, which might have lead to an underestimation of the Poisson noise, and defining the signal strength as the integral over the Bragg peak instead of the peak amplitude \cite{trost2020}. The present results suggest to use few micrometer thick samples and a tight focus of a few hundred nanometers FWHM. Second, the orientation of the detector with regards to the sample has to be aligned reliably, as the reconstructed reciprocal volume is large compared to the size of the expected Bragg peaks, and additionally, the coverage in $q_z$ direction is finite (and depends on the detector position, size and masks applied) -- bad alignment could therefore lead to fewer potential Bragg positions being inside the reconstructed reciprocal space than optimal. The actual shape of the volume that can be reconstructed from a single orientation has to be checked the concrete detector placement and shape.  For GaAs single crystals and a centered octal-MPCCD detector as available at SACLA, the sample-detector distance has to be 12-14\,cm and the alignment can be off by at most 1° to allow capturing of up to eight Bragg peaks in a single orientation. For crystals with larger distances in reciprocal space between the Bragg peaks (smaller lattice constant or different extinction rules), the distances would have to be closer accordingly, resulting in a smaller FOV for the same detector, and thus may limit the SNR due to undersampling.
-
-The insights about the influence of different numbers of spherical samples inside the focus guides the preparation of nanoparticle samples: By depositing the nanoparticles in a polymer matrix at a concentration that is on the one hand high enough to make use of the gain in signal photons but on the other hand low enough not to lose contrast in the form factor.
-
-
+In this simulation, approximately 50 images suffice to achieve an SNR (with the signal measured at 2 pixels of center in the vertical direction and the noise quantified by the standard deviation over the pixels outside the region potentially showing a signal) of $\approx$3.
 
 \begin{figure}
 	\centering
@@ -391,11 +378,25 @@ The insights about the influence of different numbers of spherical samples insid
 	\label{fig:simfoil}
 \end{figure}
 
+%$y=c/\left(1+(\sfrac{{4})\right)$
+
+\section{Discussion and Implications for an Experiment}
+The overall agreement of the simulation results with the theoretical prediction for the cases considered increase the trust in both. The agreement between the time-dependent simulation with the approximation of the number of modes overlaid in the measurement allows to simplify the simulation of samples with many excited atoms (>$10^6$) and long pulse lengths, as the time-independent simulation is, despite the applied optimizations, still much faster to perform.
+
+The scaling of the SNR with square root of the number of pixels in the performed simulation should not lead to the general conclusion that all pixel pairs pixels leading the to same $\Delta $ are independent measurement. First, depending on the geometry, the same pixels might be part of more than one of these pairs. In the small angle regime this leads to a constant reduction of the truly independent measurements that can be extracted from a single image. Second, the actual signal to be recovered creates non trivial correlations between the different pixel pairs. But the results suffices to stress the importance of having a large detector as well as a sufficient way to perform the analysis on large images.
+
+The theoretically almost doubled resolution of IDI compared to CDI will for most samples be limited by the (approximate) $q^{-4}$ dependence of the structure factor due to Porod's law and the SNR, thus only increasing the resolution for samples with strong features at high $q$, such as single crystals.
+The most relevant implications for imaging crystals are: First, it is beneficial to use a single crystal compared to a powder to allow averaging over many shots with Bragg peaks at the same positions and there is a trade-off between the number of signal photons, undersampling, and loss of speckle contrast due to the path length difference caused by the sample thickness. The results for varying crystal sizes seemingly contradict the results of simulations published independently by Trost et al, which showed a decreasing SNR with increasing number of emitters but at a higher photon yield, which might have lead to an underestimation of the Poisson noise, and defining the signal strength as the integral over the Bragg peak instead of the peak amplitude \cite{trost2020}. The present results suggest to use few micrometer thick samples and a tight focus of a few hundred nanometers FWHM. Second, the orientation of the detector with regards to the sample has to be aligned reliably, as the reconstructed reciprocal volume is large compared to the size of the expected Bragg peaks, and additionally, the coverage in $q_z$ direction is finite (and depends on the detector position, size and masks applied) -- bad alignment could therefore lead to fewer potential Bragg positions being inside the reconstructed reciprocal space than optimal. The actual shape of the volume that can be reconstructed from a single orientation has to be checked the concrete detector placement and shape.  For GaAs single crystals and a centered octal-MPCCD detector as available at SACLA, the sample-detector distance has to be 12-14\,cm and the alignment can be off by at most 1° to allow capturing of up to eight Bragg peaks in a single orientation. For crystals with larger distances in reciprocal space between the Bragg peaks (smaller lattice constant or different extinction rules), the distances would have to be closer accordingly, resulting in a smaller FOV for the same detector, and thus may limit the SNR due to undersampling.
+
+The insights about the influence of different numbers of spherical samples inside the focus guides the preparation of nanoparticle samples: By depositing the nanoparticles in a polymer matrix at a concentration that is on the one hand high enough to make use of the gain in signal photons but on the other hand low enough not to lose contrast in the form factor.
+
+
+
 
 According to the comparison of the different photon-counting methods, discretizing the recorded detector values by finding appropriate thresholds for the different numbers of signal photons reduces detector effects and should be used to analyze experimental data. Commonly used clustering algorithms such as the PSANA photon counting algorithm can by itself influence the calculated correlation. This influence can be reduced by using only pixel-wise methods. Nevertheless, directly neighboring pixels may still be influenced, and their calculated correlations should not be considered trustworthy for determining the structure factor.
 
 
-
+The performed simulation capturing most of the experimental parameters and extrapolating using the scaling laws shown, allows to estimate the number of images necessary for a successful IDI measurement of the focal width: Even though the under-sampling in the horizontal direction causes a significant reduction in signal strength, 50 images suffice in the simulation to get an acceptable SNR, leading to the estimation that, even with the additional reduction in contrast due to multiple emission lines and polarization (combined a factor <4), less than 1000 images would suffice for a replication of the previously published results \cite{nakumura2020}.
 
 
 
