--- a/Tex/simulation.tex
+++ b/Tex/simulation.tex
@@ -43,7 +43,7 @@ The described procedure is efficient in regards of discrete time steps that need
 \begin{figure}
 	\centering
 	\includegraphics[width=0.5\linewidth]{images/tdplot.pdf}
-	\caption[Integration in time dependent IDI simulation]{To illustrate the integration in the time dependent IDI simulation, the (normalized) scalar field at one point of the detector created by 10 emitting atoms with $\tau$=1\,fs and a pulse FWHM of 2\,fs is shown. For illustration purposes, the variations due to the center frequency are omitted. The solid colors show each atom's field envelope, the line plot the (phase correct) sum. The simplify the calculations, only the time points marked with stars are calculated. To solve the integral \fref{eq:tdint}, it's sufficient to calculated the squared magnitude at those points and to do a piecewise integration from each star-shaped marker the next dot-shaped marker. The color wheel in the top illustrates the phase encoding in the plot.}
+	\caption[Integration in time dependent IDI simulation]{To illustrate the integration in the time dependent IDI simulation, the (normalized) scalar field at one point of the detector created by 10 emitting atoms with $\tau$=1\,fs and a pulse FWHM of 2\,fs is shown. For illustration purposes, the variations due to the center frequency are omitted. The solid colors show each atom's field envelope, the line plot the phase correct sum. The simplify the calculations, only the time points marked with stars are calculated. To solve the integral \fref{eq:tdint}, it's sufficient to calculated the squared magnitude at those points and to do a piecewise integration from each star-shaped marker the next dot-shaped marker. The color wheel in the top illustrates the phase encoding in the plot.}
 	\label{fig:tdplot}
 \end{figure}
 
@@ -185,7 +185,7 @@ To evaluate the different approaches, for a grating with pitch 50\,nm, line widt
 
 \subsection{Accessible Reciprocal Space}
 
-	As IDI is based on $g^2(\Delta \vec{q})$, for a set of accessible $\vec{q}$ determined by the experimental geometry ($k$, detector size and distance), IDI can give information about $S(\vec{q})$ at higher $\left|\vec{q}\right|$ than a traditional scattering setup, increasing the numerical aperture (in a small angle regime up to a factor of two). With a flat detector, compared  IDI can give access to a three dimensional volume in reciprocal space, as shown in \fref{fig:accesibleq} and, with greater $q_z$ coverage the greater the curvature of the Ewald sphere is. This, for example, gives access to multiple Bragg peaks in a single crystal experiment. 
+	As IDI is based on $g^2(\Delta \vec{q})$, for a set of accessible $\vec{q}$ determined by the experimental geometry ($k$, detector size and distance), IDI can give information about $S(\vec{q})$ at higher $\left|\vec{q}\right|$ than a traditional scattering setup, increasing the numerical aperture, in a small angle regime up to a factor of two. With a flat detector, compared  IDI can give access to a three dimensional volume in reciprocal space, as shown in \fref{fig:accesibleq} and, with greater $q_z$ coverage the greater the curvature of the Ewald sphere is. This, for example, gives access to multiple Bragg peaks in a single crystal experiment. 
 	 as shown in the simulation in \fref{fig:accesiblebraggq}, but leads to non trivial shape of the accessible volume. 
 	 
 \subsection{Comparison of Normalization Techniques}
@@ -254,7 +254,7 @@ To Illustrate the effect of the number of modes on the signal and the SNR, simul
 \paragraph{Undersampling and  Sample Size}
 
 
-A simulation of a cubic single crystal with a simple cubic lattice of varying size (from 20$^3$ to 200$^3$\,atoms) was performed. The lattice constant is chosen as 5.7\,\AA, the fluorescence energy as 8\,keV. The simulated detector has 1024x1024 50\,µm sized pixels and is placed 8\,cm from the  sample. The simulation of the fluorescence patterns was performed with 4x4 oversampling (4096x4096 pixel) and rebinning to the detector size. Only a single coherence mode was simulated. The number of photons emitted by the sample in 4$\pi$ was chosen as half the number of atoms in the sample. Hence, the mean number of photons per pixel is (especially for small crystal sizes) very small, but at the upper bound of an achievable photon yield in an experiment.
+A simulation of a cubic single crystal with a simple cubic lattice of varying size from 20$^3$ to 200$^3$\,atoms was performed. The lattice constant is chosen as 5.7\,\AA, the fluorescence energy as 8\,keV. The simulated detector has 1024x1024 50\,µm sized pixels and is placed 8\,cm from the  sample. The simulation of the fluorescence patterns was performed with 4x4 oversampling (4096x4096 pixel) and rebinning to the detector size. Only a single coherence mode was simulated. The number of photons emitted by the sample in 4$\pi$ was chosen as half the number of atoms in the sample. Hence, the mean number of photons per pixel is especially for small crystal sizes very small, but at the upper bound of an achievable photon yield in an experiment.
 
 The peak signal-to-noise ratio was calculated by simulating 2000 independent images  and taking the mean intensity at the visible Bragg peaks positions as signal and the standard deviations at those positions over the independent simulations as noise, resulting in an estimated of the peak SNR of a single image.
 Due to the low photon numbers, the Poisson noise is dominating the noise characteristic and with an increase in atoms in the focus, the SNR increases linear (as shown in \fref{fig:SNRNatoms}), up to the point where a the peaks are no longer fully sampled and the signal decreases linear with a further increase in the number of atoms in the crystal, resulting in a nearly constant peak SNR.
@@ -294,10 +294,10 @@ If instead of considering the peak value of the reconstruction as signal, the th
 A simulation with varying number of spheres placed randomly inside the focal volume while ensuring a minimum distance between neighboring spheres with no other interaction was performed to decide if measuring the fluorescence of more than one nanoparticle in one shot is advantageous.
 The minimum distance was chosen according to the typical size of nanoparticle capping agents; the number of spheres increases up to a simulated Poisson sphere distribution (see appendix \fref{algo:bridson} for details) as densest random placement of particles, leading to 25\% of the volume filled by possible emitters.
 Three factors determine the structure factor of these samples: The structure factor of the focus, the structure factor of points following the poison sphere distribution  and the structure factor of a single sphere (see \fref{fig:multisphere1} and \fref{fig:multisphere3}). 
-For spheres with 20\, nm radius, a spacing layer of 5\,nm around each sphere, with  50000 excited atoms per sphere on average, a focus of 200\,nm (FWHM), the fluorescence on a 1024x1024 pixel (pixelsize 100\,um) detector placed 30\,cm was simulated. In this geometry, assuming constant distance to the sample for each detector pixel, approximately 1\% of the emitted photons reach the detector.  For each number of spheres, 5000 images were used for a radial reconstruction using the direct method (see \fref{fig:multisphere2}).
-As the number of photons emitted by each sphere was kept constant, opposing effects occur:  With an increasing number of particles, more are photons are emitted, and the Poisson noise is reduced, but the signal strength in low scattering angles decreases as the structure factor changes from a single sphere to a hard-sphere model and the influence of the focal volume and the distribution of the spheres on the structure factor increases, resulting in 
+For spheres with 20\, nm radius, a spacing layer of 5\,nm around each sphere, with  50000 excited atoms per sphere on average, a focus of 200\,nm FWHM, the fluorescence on a 1024x1024 pixel (pixelsize 100\,um) detector placed 30\,cm was simulated. In this geometry, assuming constant distance to the sample for each detector pixel, approximately 1\% of the emitted photons reach the detector.  For each number of spheres, 5000 images were used for a radial reconstruction using the direct method (see \fref{fig:multisphere2}).
+As the number of photons emitted by each sphere was kept constant, opposing effects occur:  With an increasing number of particles, more are photons are emitted, and the Poisson noise is reduced, but the signal strength in low scattering angles decreases as the structure factor changes from a single sphere to a hard-sphere model and the influence of the focal volume and the distribution of the spheres on the structure factor increases, 
 
-XXX MISSING SNR NUMBERS XXXX
+In the case of 16 randomly positioned spheres, the mean distance to the nearest neighbor in the simulation is approx. three times the diameter. Compared to a single sample the noise as measured by the standard error in the reconstruction is reduced by a factor of 10. At the same time, the signal signal strength at the first maximum decreases by a factor of only 3, leading to an overall gain in SNR.  The dense random packing, with mean nearest simulated neighbor distance of 1.4 times the diameter, reduces the noise further by an additional factor of 5 but also reduces the signal by a factor of 10. Hence, the medium dense sample show the best SNR in this simulation.
  
 \begin{figure}
 	\centering
@@ -385,12 +385,10 @@ The overall agreement of the simulation results with the theoretical prediction 
 
 The scaling of the SNR with square root of the number of pixels in the performed simulation should not lead to the general conclusion that all pixel pairs pixels leading the to same $\Delta $ are independent measurement. First, depending on the geometry, the same pixels might be part of more than one of these pairs. In the small angle regime this leads to a constant reduction of the truly independent measurements that can be extracted from a single image. Second, the actual signal to be recovered creates non trivial correlations between the different pixel pairs. But the results suffices to stress the importance of having a large detector as well as a sufficient way to perform the analysis on large images.
 
-The theoretically almost doubled resolution of IDI compared to CDI will for most samples be limited by the (approximate) $q^{-4}$ dependence of the structure factor due to Porod's law and the SNR, thus only increasing the resolution for samples with strong features at high $q$, such as single crystals.
+The theoretically almost doubled resolution of IDI compared to CDI will for most samples be limited by the approximate $q^{-4}$ dependence of the structure factor due to Porod's law and the SNR, thus only increasing the resolution for samples with strong features at high $q$, such as single crystals.
 The most relevant implications for imaging crystals are: First, it is beneficial to use a single crystal compared to a powder to allow averaging over many shots with Bragg peaks at the same positions and there is a trade-off between the number of signal photons, undersampling, and loss of speckle contrast due to the path length difference caused by the sample thickness. The results for varying crystal sizes seemingly contradict the results of simulations published independently by Trost et al, which showed a decreasing SNR with increasing number of emitters but at a higher photon yield, which might have lead to an underestimation of the Poisson noise, and defining the signal strength as the integral over the Bragg peak instead of the peak amplitude \cite{trost2020}. The present results suggest to use few micrometer thick samples and a tight focus of a few hundred nanometers FWHM. Second, the orientation of the detector with regards to the sample has to be aligned reliably, as the reconstructed reciprocal volume is large compared to the size of the expected Bragg peaks, and additionally, the coverage in $q_z$ direction is finite (and depends on the detector position, size and masks applied) -- bad alignment could therefore lead to fewer potential Bragg positions being inside the reconstructed reciprocal space than optimal. The actual shape of the volume that can be reconstructed from a single orientation has to be checked the concrete detector placement and shape.  For GaAs single crystals and a centered octal-MPCCD detector as available at SACLA, the sample-detector distance has to be 12-14\,cm and the alignment can be off by at most 1° to allow capturing of up to eight Bragg peaks in a single orientation. For crystals with larger distances in reciprocal space between the Bragg peaks (smaller lattice constant or different extinction rules), the distances would have to be closer accordingly, resulting in a smaller FOV for the same detector, and thus may limit the SNR due to undersampling.
 
-The insights about the influence of different numbers of spherical samples inside the focus guides the preparation of nanoparticle samples: By depositing the nanoparticles in a polymer matrix at a concentration that is on the one hand high enough to make use of the gain in signal photons but on the other hand low enough not to lose contrast in the form factor.
-
-
+The insights about the influence of different numbers of spherical samples inside the focus guides the preparation of nanoparticle samples: By depositing the nanoparticles in a polymer matrix at a concentration that is on the one hand high enough to make use of the gain in signal photons but on the other hand low enough not to lose contrast in the form factor. While in the performed simulation the single particle was always in the center of the focus, this would not be the case in an experiment with a tight focus, further stressing the advantages of having multiple sample inside the focal volume.
 
 
 According to the comparison of the different photon-counting methods, discretizing the recorded detector values by finding appropriate thresholds for the different numbers of signal photons reduces detector effects and should be used to analyze experimental data. Commonly used clustering algorithms such as the PSANA photon counting algorithm can by itself influence the calculated correlation. This influence can be reduced by using only pixel-wise methods. Nevertheless, directly neighboring pixels may still be influenced, and their calculated correlations should not be considered trustworthy for determining the structure factor.
